Fix alignment of nav

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ a.twitter-follow-button {
   display: inline-block;
   color: #5a5a5b;
   margin-left: 1em;
+  margin-top: 0.4em;
 }
 
 .site .header .title,
